Corrected the german text.

--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -87,78 +87,78 @@
 "You can't see map directions"	= "Wegweiser nicht verfügbar";
 "Error With Connection Or PartnerId Or CouponId may not exist" = "Error With Connection Or PartnerId Or CouponId may not exist";
 
-"Can't Be Added" = "Kann nicht hinzugefügt werden”
+"Can't Be Added" = "Kann nicht hinzugefügt werden";
 
-"You can't add google Products to Favorites" = "Du kannst keine Google Produkte zu Favoriten hinzufügen"
+"You can't add google Products to Favorites" = "Du kannst keine Google Produkte zu Favoriten hinzufügen";
 
-"Added to Favorites" = "zu Favoriten hinzugefügt”
+"Added to Favorites" = "zu Favoriten hinzugefügt";
 
-"Coupon has been added to favorites" = "Coupon zu Favoriten hinzugefügt”
+"Coupon has been added to favorites" = "Coupon zu Favoriten hinzugefügt";
 
-"Error" = "Fehler”
+"Error" = "Fehler";
 
-"Error With Connection Or There is no Coupon in this category" = "Verbindungsfehler oder kein Coupon in dieser Kategorie”
+"Error With Connection Or There is no Coupon in this category" = "Verbindungsfehler oder kein Coupon in dieser Kategorie";
 
-"Error With Connection Or Coupon may not exist" = "Verbindungsfehler oder Coupon nicht existent”
+"Error With Connection Or Coupon may not exist" = "Verbindungsfehler oder Coupon nicht existent";
 
-"Position" = "Position"
+"Position" = "Position";
 
-"Feedback" = "Feedback"
+"Feedback" = "Feedback";
 
-"About Cumbari" = "Über MOblYO"
+"About Cumbari" = "Über MOblYO";
 
-"Error With Connection Or There is no Coupon in this brand" = "Verbindungsfehler oder diese Marke hat keinen Coupon"
+"Error With Connection Or There is no Coupon in this brand" = "Verbindungsfehler oder diese Marke hat keinen Coupon";
 
-"Error With Connection Or PartnerId Or CouponId may not exist" = "Verbindungsfehler oder Partner-ID oder Coupon-ID nicht existent"
+"Error With Connection Or PartnerId Or CouponId may not exist" = "Verbindungsfehler oder Partner-ID oder Coupon-ID nicht existent";
 
-"Tap On Map" = "Karte antippen"
+"Tap On Map" = "Karte antippen";
 
-"Search" = "Suche"
+"Search" = "Suche";
 
-"Time Remaining" = "Restzeit"
+"Time Remaining" = "Restzeit";
 
-"Not Logged In" = "Nicht eingeloggt"
+"Not Logged In" = "Nicht eingeloggt";
 
-"Mail Sent" = "Mail gesendet"
+"Mail Sent" = "Mail gesendet";
 
-"Mail Sending Failed" = "Mailversand fehlgeschlagen"
+"Mail Sending Failed" = "Mailversand fehlgeschlagen";
 
-"Post Deal" = "Deal posten"
+"Post Deal" = "Deal posten";
 
-"Posting Data to facebook" = "Daten werden an Facebook übermittelt"
+"Posting Data to facebook" = "Daten werden an Facebook übermittelt";
 
-"Can't go back while posting data" = "Zurückgehen nicht möglich während der Datenübertragung"
+"Can't go back while posting data" = "Zurückgehen nicht möglich während der Datenübertragung";
 
-"You have logged out!" = "Du bist ausgeloggt"
+"You have logged out!" = "Du bist ausgeloggt";
 
-"You have to log in to post the deal" = "Du musst dich einloggen um den Deal zu posten"
+"You have to log in to post the deal" = "Du musst dich einloggen um den Deal zu posten";
 
-"Deal Successfully posted!" = "Deal erfolgreich gepostet!"
+"Deal Successfully posted!" = "Deal erfolgreich gepostet!";
 
-"Deal to facebook has been posted" = "Deal auf Facebook veröffentlicht"
+"Deal to facebook has been posted" = "Deal auf Facebook veröffentlicht";
 
-"Not connected to Facebook" = "Nicht mit Facebook verbunden"
+"Not connected to Facebook" = "Nicht mit Facebook verbunden";
 
-"Login" = "Einloggen"
+"Login" = "Einloggen";
 
-"Connecting to Facebook..." = "Verbindungsaufbau zu Facebook …"
+"Connecting to Facebook..." = "Verbindungsaufbau zu Facebook …";
 
-"Connected to Facebook" = "Mit Facebook verbunden"
+"Connected to Facebook" = "Mit Facebook verbunden";
 
-"Logout" = "Ausloggen"
+"Logout" = "Ausloggen";
 
-"Standards" = "Standard"
+"Standards" = "Standard";
 
-"Satellite" = "Satellit"
+"Satellite" = "Satellit";
 
-"Hybrid" = "Hybrid"
+"Hybrid" = "Hybrid";
 
-"Store Information" = "Firmeninformation"
+"Store Information" = "Firmeninformation";
 
-"You have not logged into your mail account" = "Du bist nicht in deinem Email Konto angemeldet"
+"You have not logged into your mail account" = "Du bist nicht in deinem Email Konto angemeldet";
 
-"Meter" = "Meter"
+"Meter" = "Meter";
 
-"Miles" = "Miles"
+"Miles" = "Miles";
 
 
